[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stayops"
version = "0.1.0"
description = "Stay operations management system with GraphQL API"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Isiaka Mosudi", email = "imosudi@gmail.com"}
]
keywords = ["stayops", "property-management", "booking", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Migrate==4.0.4",
    "Werkzeug==3.1.4",
    
    # GraphQL
    "Flask-GraphQL==2.0.1",
    "graphene==2.1.9",
    "graphene-sqlalchemy==2.3.0",
    "graphql-core==2.3.2",
    "graphql-relay==2.0.1",
    
    # Database
    "SQLAlchemy==1.4.54",
    "alembic==1.17.2",
    "psycopg2-binary==2.9.9",
    
    # Task Queue & Scheduling
    "celery==5.3.1",
    "redis==5.2.0",
    "APScheduler==3.10.1",
    
    # Data Validation & Serialization
    "pydantic==2.12.5",
    "marshmallow==3.21.0",
    
    # Utilities
    "python-dotenv==1.0.0",
    "loguru==0.7.0",
    "requests==2.32.1",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-flask>=1.3",
    "coverage>=7.13",
    "factory-boy>=3.3",
    "Faker>=39.0",
    
    # Code Quality
    "black>=24.10",
    "flake8>=6.1",
    "mypy>=1.5",
    
    # Dev Tools
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/yourusername/stayops"
Repository = "https://github.com/yourusername/stayops"
Issues = "https://github.com/yourusername/stayops/issues"

[tool.setuptools]
packages = ["stayops"]

[tool.setuptools.package-data]
stayops = ["graphql/*.graphql"]

# ==================== Tool Configurations ====================

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=stayops",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["stayops"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "graphene.*",
    "graphene_sqlalchemy.*",
    "flask_graphql.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migrations",
    "*.pyc",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["stayops"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]